# caliperai-gt

./: .env.example  .env.production.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.prod.gpu.yml  docker-compose.prod.yml  docker-compose.sam2.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.postgres  Dockerfile.sam2  Dockerfile.sam2-cpu  README.md  alembic.ini  conftest.py  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_stage_to_tasks.py  003_add_annotations_4d.py  004_add_mode_specific_annotation_tables.py  005_add_tracks_2d_table.py  006_add_semantic_segment_type.py  007_add_qa_tables.py  008_add_workflow_system.py  009_add_rbac_system.py  010_add_dataops_tables.py  011_add_taxonomy_annotation_mode.py  012_add_deadline_columns.py  013_add_is_keyframe_to_annotations_3d.py  014_add_shared_attributes_to_taxonomy.py  015_add_task_assignment_history.py  016_add_frame_class_to_annotation_reviews.py  017_add_review_stage_to_qa_reviews.py  018_add_organization_multitenancy.py  019_add_unique_dataset_name_per_campaign.py  020_add_unique_campaign_name_per_organization.py  021_make_taxonomy_org_required.py  022_add_user_security_fields.py  023_add_efficiency_monitoring_tables.py  024_add_chat_tables.py  (+12 more)
backend/app/: main.py
backend/scripts/: backfill_encrypt_pii.py  create_admin.py  create_test_users.py  download_sam2_models.py  import_existing_annotations.py  init-db.sql  init_db.py
backend/tests/: test_auth_security.py  test_browse_security.py  test_encryption.py  test_file_security.py  test_minio_storage.py  test_openapi_docs.py  test_secret_key.py  test_sso.py  test_tls_in_transit.py
(+315 files in other folders)
