[project]
name = "calipergt-backend"
version = "1.0.0"
description = "Sensor Fusion Annotation Platform Backend"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.0.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "geoalchemy2>=0.14.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "numpy>=1.26.0",
    "orjson>=3.9.0",
    "Pillow>=10.0.0",
    "google-cloud-storage>=2.14.0",
    # AI Chatbot dependencies
    "ollama>=0.2.0",
    "sse-starlette>=1.6.0",
    # SSO / OIDC
    "authlib>=1.3.0",
    # Encryption at rest – application-level Fernet (AC 3)
    # cryptography is already a transitive dep of python-jose, but pin it directly
    # so the minimum version providing Fernet is guaranteed.
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
